<resources>
    <string name="app_name">Loyalty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_openDrawer">openDrawer</string>
    <string name="nav_closeDrawer">closeDrawer</string>
    <string name="tv_deal">DEAL OF THE WEEK</string>
    <string name="tv_view_all">View All</string>
    <string name="iv_notification">NOTIFICATION</string>
    <string name="iv_new_arrival">NEW ARRIVAL</string>
    <string name="iv_shop">SHOP</string>
    <string name="iv_loyalty">LOYALTY</string>
    <string name="tv_feedback_title">FeedBack</string>
    <string name="tv_feedback_name">Name</string>
    <string name="tv_feedback_email">Email</string>
    <string name="tv_feedback_phno">Phone number</string>
    <string name="tv_feedback_loyalty_no">Loyalty card number</string>
    <string name="tv_feedback_description">Write your feedback...</string>
    <string name="btn_feedback_submit">Submit</string>

    <string name="hint_username">Username</string>
    <string name="hint_pwd">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_new_user">New user</string>
    <string name="tv_forgot_pwd">Forgot Password?</string>

    <string name="tv_register_title">Register</string>
    <string name="tv_register_name">First name</string>
    <string name="tv_register_lastname">Last name</string>
    <string name="tv_register_email">Email</string>
    <string name="tv_register_dob">Date of birth</string>
    <string name="tv_register_phno">Phone number</string>
    <string name="tv_register_loyalty_no">Loyalty card number</string>
    <string name="tv_register_pwd">Password</string>
    <string name="tv_register_confirm_pwd">Conform password</string>
    <string name="btn_register_submit">Submit</string>

    <string name="et_forgot_email_hint">eMail address</string>
    <string name="btn_forgot_ok">OK</string>
    <string name="btn_forgot_cancel">CANCEL</string>


    <string name="tv_wishlist_title">WishList</string>
    <string name="tv_wishlist_name">Name</string>
    <string name="tv_wishlist_email">Email</string>
    <string name="tv_wishlist_phno">Phone number</string>
    <string name="tv_wishlist_loyalty_no">Loyalty card number</string>
    <string name="tv_wishlist_description">Write your wishlist...</string>
    <string name="btn_wishlist_submit">Submit</string>

    <string name="edit_profile_title">Update Profile</string>
    <string name="edit_profile_firstname">First name</string>
    <string name="edit_profile_lastname">Last name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_dob">Date of birth</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_loyalty_no">Loyalty card number</string>
    <string name="edit_profile_pwd">Password</string>
    <string name="edit_profile_submit">Submit</string>

    <string-array name="spinner_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>
