<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_register_title"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_name"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_name"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_email"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_email"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:singleLine="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_ph_no"
            android:maxLength="10"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_phno"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:inputType="number"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_loyalty_no"
            android:maxLength="12"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/tv_register_loyalty_no"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:inputType="number"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_pwd"
            android:hint="@string/tv_register_pwd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_newuser_confirm_pwd"
            android:hint="@string/tv_register_confirm_pwd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_feedback_submit"
            android:background="#0099CC"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_newuser_submit"/>

    </LinearLayout>

</RelativeLayout>
