<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tool_bar"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_wishlist_title"
            android:textStyle="bold"
            android:textSize="25dp"/>
        <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/et_wishlist_name"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/tv_wishlist_name"
        android:gravity="center"
        android:textCursorDrawable="@drawable/edittext_cursor_color"
        android:background="@drawable/custom_edittext"
        android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_wishlist_email"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tv_wishlist_email"
            android:gravity="center"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/custom_edittext"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_wishlist_phno"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tv_wishlist_phno"
            android:gravity="center"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:inputType="number"
            android:maxLength="10"
            android:background="@drawable/custom_edittext"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_wishlist_loyalty_no"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tv_wishlist_loyalty_no"
            android:inputType="number"
            android:maxLength="12"
            android:gravity="center"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:background="@drawable/custom_edittext"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/et_wishlist_description"
            android:hint="@string/tv_wishlist_description"
            android:gravity="top|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:paddingLeft="5dp"
            android:background="@drawable/custom_edittext"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_wishlist_submit"
            android:background="@color/ColorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_wishlist_submit"/>




    </LinearLayout>

</RelativeLayout>
