<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="Login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:gravity="center"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/et_username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/hint_pwd"
            android:gravity="center"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/et_pwd"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_login"
            android:background="#0099CC"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btn_login" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_new_user"
                android:background="#0099CC"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/btn_register" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forgot_pwd"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_forgot_pwd"
            android:layout_gravity="right" />
    </LinearLayout>

</RelativeLayout>
