<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>
        <android.support.v4.view.ViewPager
            android:id="@+id/reviewpager"
            android:layout_width="fill_parent"
            android:layout_height="200dp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:id="@+id/iv_loyalty"
                android:layout_weight="1"
                android:background="@drawable/im_home_loyalty">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/iv_loyalty"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:id="@+id/iv_shop"
                android:layout_weight="1"
                android:background="@drawable/im_shop">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/iv_shop"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:id="@+id/iv_new_arrival"
                android:background="@drawable/im_new_arrival">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/iv_new_arrival"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:id="@+id/iv_notification"
                android:layout_weight="1"
                android:background="@drawable/im_notification">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/iv_notification"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#ffffff"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</android.support.v4.widget.DrawerLayout>